--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://yourdomain.com"
+baseurl = "http://localhost/"
 languageCode = "en-us"
 title = "Sino-Herbs"
 canonifyUrls = "true"
