--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "http://localhost/"
 languageCode = "en-us"
 title = "Sino-Herbs"
 canonifyUrls = "true"
+publishDir = "docs"
 
 [params]
     description = "Chinesische Heilpflanzenhaus"
