--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://localhost/"
+baseurl = "https://madsystem.github.io/tcm/"
 languageCode = "en-us"
 title = "Sino-Herbs"
 canonifyUrls = "true"
